<resources>
    <string name="app_name">NUMAD21Su-MohammadSJaleel</string>
    <string name="show_info">About</string>
    <string name="hide_info">Hide</string>
    <string name="hello_world_text">Hello World!</string>
    <string name="name_address_text" />
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="link_collector">Link</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Description</string>
    <string name="description">This image acts as an icon.</string>
    <string name="url_popup_heading">Add New URL</string>
    <string name="url_popup_save">Save</string>
    <string name="url_popup_cancel">Cancel</string>
    <string name="location_latitude">Latitude</string>
    <string name="location_longitude">Longitude</string>
    <string name="location_btn">Loc</string>
    <string name="service_btn">A6</string>
    <string name="service_search_btn">Search Movies</string>
    <string name="service_search_field">Enter Movie Name</string>
</resources>